# ROS2-Goal-navigation-system

./: README.md
src/bme_gazebo_sensors/: CMakeLists.txt  package.xml
src/bme_gazebo_sensors/launch/: spawn_robot_ex.launch.py  world.launch.py
src/bme_gazebo_sensors/mashes/: mogi_bot.dae  wheel.dae
src/bme_gazebo_sensors/rviz/: rviz.rviz
src/bme_gazebo_sensors/urdf/: materials.xacro  mogi_bot.gazebo  mogi_bot.urdf
src/bme_gazebo_sensors/worlds/: my.sdf  my_world.sdf  world_empty.sdf
src/rt2_navigation_assignment/: CMakeLists.txt  package.xml
src/rt2_navigation_assignment/launch/: load_navigation_components.launch.py  start_navigation_container.launch.py
src/rt2_navigation_assignment/src/: navigation_action_server.cpp  navigation_client_component.cpp
src/rt2_navigation_interfaces/: CMakeLists.txt  package.xml
src/rt2_navigation_interfaces/action/: NavigateToPose.action
